[package]
name = "dragon_reach"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "DragonReach"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11"
cfg-if = { version = "1.0"}

[target.'cfg(target_os = "dragonos")'.dependencies]
drstd = {git = "https://github.com/DragonOS-Community/drstd.git", revision = "8b1e314e01"}
dragonos-dsc = { git = "https://git.mirrors.dragonos.org/DragonOS-Community/dragonos-dsc.git", rev = "aa61cb0109" }

lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }

[target.'cfg(not(target_os = "dragonos"))'.dependencies]
lazy_static = { version = "1.4.0" }

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
