[package]
name = "dragon_reach"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "DragonReach"
path = "src/main.rs"

[[bin]]
name = "systemctl"
path = "systemctl/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11"
cfg-if = { version = "1.0"}
lazy_static = { version = "1.4.0" }
libc = "0.2"

[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
