[package]
name = "systemctl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "systemctl"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = { version = "1.0"}

[target.'cfg(target_os = "dragonos")'.dependencies]
drstd = {git = "https://github.com/DragonOS-Community/drstd.git", revision = "8b1e314e01"}
